--- a/_includes/layouts/docs.njk
+++ b/_includes/layouts/docs.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.njk
-title: Eleventy Documentation
+title: The Dixons
 templateClass: elv-docs
 headerClass: elv-header-docs
 layoutClass: elv-layout-toc
