logo/header/home page fixes

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 ---
 social:
-  imgsrc: https://www.11ty.dev/img/open-graph.jpg
-  imgalt: The 11ty logo text with a small floating possum on a balloon
+  imgsrc: https://www.thedixons.net/img/logo.png
+  imgalt: TheDixons.net logo, an old-fashioned Quaker hat
   description: The Dixons - A Colonial Quaker Family
 ---
 <!doctype html>
