--- a/styleguide.njk
+++ b/styleguide.njk
@@ -1,6 +1,6 @@
 ---
 title: Style Guide
-layout: layouts/docs.njk
+layout: layouts/houses.njk
 layoutClass: elv-layout-full
 ---
 
@@ -34,8 +34,8 @@ layoutClass: elv-layout-full
 
 <div class="elv-sg-component">
 <ul class="list-bare">
-  <li class="list-bare-item"><a href="/docs/resources/#static-sites">Static Sites</a></li>
-  <li class="list-bare-item"><a href="/docs/resources/#jamstack">JAMstack</a></li>
+  <li class="list-bare-item"><a href="/houses/resources/#static-sites">Static Sites</a></li>
+  <li class="list-bare-item"><a href="/houses/resources/#jamstack">JAMstack</a></li>
 </ul>
 </div>
 
@@ -43,8 +43,8 @@ layoutClass: elv-layout-full
 
 <div class="elv-sg-component">
 <ul class="inlinelist">
-  <li class="inlinelist-item"><a href="/docs/resources/#static-sites">Static Sites</a></li>
-  <li class="inlinelist-item"><a href="/docs/resources/#jamstack">JAMstack</a></li>
+  <li class="inlinelist-item"><a href="/houses/resources/#static-sites">Static Sites</a></li>
+  <li class="inlinelist-item"><a href="/houses/resources/#jamstack">JAMstack</a></li>
 </ul>
 </div>
 
@@ -91,8 +91,8 @@ layoutClass: elv-layout-full
 
 <div class="elv-sg-component">
 <ul class="buzzword-list">
-  <li><a href="/docs/resources/#static-sites">Static Sites</a></li>
-  <li><a href="/docs/resources/#jamstack">JAMstack</a></li>
+  <li><a href="/houses/resources/#static-sites">Static Sites</a></li>
+  <li><a href="/houses/resources/#jamstack">JAMstack</a></li>
 </ul>
 </div>
 
@@ -109,11 +109,3 @@ layoutClass: elv-layout-full
 <h3>Sticky info block</h3>
 
 Use the <code>elv-callout-sticky</code> class to affix to the top of the viewport while scrolling.
-
-<!-- <div class="elv-sg-component">
-    <div class="elv-callout elv-callout-info">This documentation is for an upcoming version of Eleventy. Go to the <a href="https://www.11ty.dev/docs/">latest stable version of Eleventy docs</a> or check out the <a href="https://www.11ty.dev/docs/versions/">full release history.</a></div>
-</div>
-
-<div class="elv-sg-component">
-    <div class="elv-callout elv-callout-warn">This documentation is for an older version. Go to the <a href="https://www.11ty.dev/docs/">newest Eleventy docs</a> or check out the <a href="https://www.11ty.dev/docs/versions/">full release history.</a></div>
-</div> -->
