--- a/_includes/layouts/langs.njk
+++ b/_includes/layouts/langs.njk
@@ -1,5 +1,5 @@
 ---
-layout: layouts/docs.njk
+layout: layouts/houses.njk
 ---
 <h1>{{ eleventyNavigation.key }}{% if addedInVersion %}{% addedin addedInVersion%}{% endif %}</h1>
 
