move all articles to root

--- a/styleguide.njk
+++ b/styleguide.njk
@@ -34,8 +34,8 @@ layoutClass: elv-layout-full
 
 <div class="elv-sg-component">
 <ul class="list-bare">
-  <li class="list-bare-item"><a href="/houses/resources/#static-sites">Static Sites</a></li>
-  <li class="list-bare-item"><a href="/houses/resources/#jamstack">JAMstack</a></li>
+  <li class="list-bare-item"><a href="/resources/#static-sites">Static Sites</a></li>
+  <li class="list-bare-item"><a href="/resources/#jamstack">JAMstack</a></li>
 </ul>
 </div>
 
@@ -43,8 +43,8 @@ layoutClass: elv-layout-full
 
 <div class="elv-sg-component">
 <ul class="inlinelist">
-  <li class="inlinelist-item"><a href="/houses/resources/#static-sites">Static Sites</a></li>
-  <li class="inlinelist-item"><a href="/houses/resources/#jamstack">JAMstack</a></li>
+  <li class="inlinelist-item"><a href="/resources/#static-sites">Static Sites</a></li>
+  <li class="inlinelist-item"><a href="/resources/#jamstack">JAMstack</a></li>
 </ul>
 </div>
 
@@ -91,8 +91,8 @@ layoutClass: elv-layout-full
 
 <div class="elv-sg-component">
 <ul class="buzzword-list">
-  <li><a href="/houses/resources/#static-sites">Static Sites</a></li>
-  <li><a href="/houses/resources/#jamstack">JAMstack</a></li>
+  <li><a href="/resources/#static-sites">Static Sites</a></li>
+  <li><a href="/resources/#jamstack">JAMstack</a></li>
 </ul>
 </div>
 
