--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,6 +1,8 @@
 <header class="elv-layout elv-layout-full elv-header{% if headerClass %} {{ headerClass }}{% endif %}">
-	<a href="{% if logoLink %}{{ logoLink | url }}{% else %}/{% endif %}" class="elv-externalexempt"><img src="{{ "/img/logo.png" | url }}" onerror="this.src='{{ "/img/logo.png" | url }}'" alt="TheDixons logo - an old-fashioned Quaker hat" loading="eager"></a>
-	<h1 class="elv-hed">{{ title | orphanWrap | safe }}</h1>
+<div class="bg-hed"><img src="/img/hockessin.jpg"></div>
+	<a href="https://thedixons.net" class=""><img src="{{ "/img/logo.png" | url }}" onerror="this.src='{{ "/img/logo.png" | url }}'" alt="TheDixons logo - an old-fashioned Quaker hat" loading="eager">
+	<h1 class="elv-hed">The Dixons</h1>
+	<h3 class="subtitle">A Colonial Quaker Family</h3></a>
 	<div class="elv-nav-header">
 		<ul class="elv-nav lo">
 			<li class="elv-nav-item lo-c"><a href="{{ "/search/" | url }}" class="elv-nav-light nound">{% emoji "🔎" %}<span class="und">Search</span></a></li>
