--- a/_includes/components/layout.css
+++ b/_includes/components/layout.css
@@ -5,7 +5,7 @@
   --lo-margin-h: 0px;
   --lo-margin-v: 0px;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
   margin: 0;
   margin-top: calc(-1 * var(--lo-margin-v));
   margin-left: calc(-1 * var(--lo-margin-h));
