--- a/_includes/components/navigation.css
+++ b/_includes/components/navigation.css
@@ -26,11 +26,11 @@
 	width: 100%;
 }
 .elv-nav-header > .lo > .lo-c {
-	flex-basis: 50%;
+	flex-basis: 25%;
 }
 @media (min-width: 25em) { /* 400px */
 	.elv-nav-header > .lo > .lo-c {
-		flex-basis: 33%;
+		flex-basis: 25%;
 	}
 }
 .elv-nav-header .elv-nav-item .emoji,
@@ -48,6 +48,7 @@
 	.elv-nav-header .elv-nav-item {
 		position: relative;
 		padding-left: 1.6rem;
+		margin-right: 15px;
 	}
 	.elv-nav-header .elv-nav-item .emoji,
 	.elv-nav-header .elv-nav-item .icon,
