fix logo for lazy-loading

--- a/_includes/index.css
+++ b/_includes/index.css
@@ -327,6 +327,10 @@ footer.elv-layout {
 .bg-lts a {
 	text-decoration: none;
 }
+.bg-lts img {
+	display: inline-block;
+	width: auto;
+}
 .bg-hed img {
 	position: absolute;
     left: 0;
