--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,5 +1,5 @@
 <header class="elv-layout elv-layout-full elv-header{% if headerClass %} {{ headerClass }}{% endif %}">
-<div class="bg-hed"><img src="/img/hockessin.jpg"></div>
+<div class="bg-hed"><img src="/img/hockessin.jpg" alt="Hockessin Meeting house - Delaware"></div>
 <div class="bg-lts">
 	<a href="https://thedixons.net"><img src="/img/logo.png" alt="TheDixons logo - an old-fashioned Quaker hat">
 	<h1 class="elv-hed">The Dixons</h1></a>
@@ -8,8 +8,8 @@
 	<div class="elv-nav-header">
 		<ul class="elv-nav lo">
 			<li class="elv-nav-item lo-c"><a href="{{ "/search/" | url }}" class="elv-nav-light nound">{% emoji "🔎" %}<span class="und">Search</span></a></li>
-			<li class="elv-nav-item lo-c lo-nocontentwrap"><a href="https://github.com/dixonge/thedixons-11ty-docs/" class="elv-nav-light elv-externalexempt"><img src="/img/github.svg" class="icon" alt=""><b>GitHub</b></a></li>
-			<li class="elv-nav-item lo-c lo-nocontentwrap"><a href="https://twitter.com/realglenndixon" class="elv-nav-light elv-externalexempt"><img src="/img/twitter.svg" class="icon" alt=""><b>Twitter</b></a></li>
+			<li class="elv-nav-item lo-c lo-nocontentwrap"><a href="https://github.com/dixonge/thedixons-11ty-docs/" class="elv-nav-light elv-externalexempt"><img src="/img/github.svg" class="icon" alt="Github logo"><b>GitHub</b></a></li>
+			<li class="elv-nav-item lo-c lo-nocontentwrap"><a href="https://twitter.com/realglenndixon" class="elv-nav-light elv-externalexempt"><img src="/img/twitter.svg" class="icon" alt="Twitter logo"><b>Twitter</b></a></li>
 		</ul>
 	</div><!-- /elv-nav-header -->
 </header>
