comment out font-titles css

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -38,7 +38,7 @@ social:
 		<meta property="twitter:image:alt" content="{{ social.imgalt }}">
 
 {%- set css %}
-{% include 'components/font-titles.css' %}
+<!-- {% include 'components/font-titles.css' %} -->
 {{ googlefonts | safe }}
 {% include 'index.css' %}
 {% include 'components/layout.css' %}
