remove benchine font

--- a/_includes/components/docs-toc.njk
+++ b/_includes/components/docs-toc.njk
@@ -1,7 +1,7 @@
 <div class="elv-toc">
 
 <details open>
-	<summary class="btn-primary benchnine rainbow-active rainbow-active-noanim">Menu</summary>
+	<summary class="btn-primary  rainbow-active rainbow-active-noanim">Menu</summary>
 	{%- if eleventyNavigation -%}
 		{%- set navKey = eleventyNavigation.key -%}
 	{%- endif -%}
