--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,5 +1,5 @@
 <header class="elv-layout elv-layout-full elv-header{% if headerClass %} {{ headerClass }}{% endif %}">
-<div class="bg-hed"><img src="/img/hockessin.jpg" alt="Hockessin Meeting house - Delaware"></div>
+<div class="bg-hed"><img src="/img/hockessin-short.jpg" alt="Hockessin Meeting house - Delaware"></div>
 <div class="bg-lts">
 	<a href="https://thedixons.net"><img src="/img/logo.png" alt="TheDixons logo - an old-fashioned Quaker hat">
 	<h1 class="elv-hed">The Dixons</h1></a>
