--- a/_includes/index.css
+++ b/_includes/index.css
@@ -14,7 +14,7 @@
 	box-sizing: border-box;
 }
 body {
-	font-family: system-ui, sans-serif;
+	font-family: Arial, system-ui, sans-serif;
 	color: #222;
 	margin: 0;
 }
