hiding js-class.js

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -61,9 +61,10 @@ social:
 		<link rel="alternate" href="{{ feedUrl }}" title="{{ feedTitle }}" type="application/atom+xml">
 {% endif %}
 		<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.png">
-		<script>
+<!--		<script>
 		{%- include "components/js-class.js" -%}
 		</script>
+-->
 {% if loadNetlifyIdentity %}
 		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		<script src="/js/eleventy.js" type="module"></script>
