include index.css in new folder

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -59,7 +59,7 @@ social:
 <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 
 {%- set css %}
-{% include 'index.css' %}
+{% include 'css/index.css' %}
 {% include 'components/layout.css' %}
 {% include 'components/breadcrumb.css' %}
 {% include 'components/navigation.css' %}
